# pdcli

./: .pylintrc  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: check.yml  check_and_publish.yml  publish-to-pypi.yml  release.yml
pdcli/: module1.py  pd.py  py.typed
pdcli/api/: incident.py  session.py  user.py
pdcli/command/: ack.py  ls.py  merge.py  user.py
tests/: test_module1.py
tests/command/: conftest.py  test_ack.py  test_ls.py  test_merge.py  test_user.py
